Replace darkmode plugin with custom script

--- a/challenges.html
+++ b/challenges.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+	<div class="mode-switcher">
+		<button id="toggle-dark-mode">🌓</button>
+	</div>
 	<header class="header">
 		<div class="container">
 			<div class="nav--bar d-flex align-items-center">
@@ -43,7 +46,8 @@
 						<path d="M15.8732 1.27464H23V8.09154" stroke="white" stroke-width="3"></path>
 						<path d="M22.8451 15.3732L22.8451 22.5L16.0282 22.5" stroke="white" stroke-width="3"></path>
 						<path d="M8.12676 22.3451L1 22.3451L1 15.5282" stroke="white" stroke-width="3"></path>
-						<path d="M1.15493 8.24648L1.15493 1.11971L7.97183 1.11971" stroke="white" stroke-width="3"></path>
+						<path d="M1.15493 8.24648L1.15493 1.11971L7.97183 1.11971" stroke="white" stroke-width="3">
+						</path>
 					</svg>
 					<svg id="shrink" width="21" height="21" viewBox="0 0 21 21" fill="none">
 						<path d="M12.7826 0V7.30435H21" stroke="white" stroke-width="2"></path>
@@ -122,7 +126,8 @@
 				<div class="row">
 					<div class="col-12 mb-5 mt-3">
 						<div class="form-group text-center">
-							<button class="calc-result text-white text-capitalize" type="submit">calculate expected result</button>
+							<button class="calc-result text-white text-capitalize" type="submit">calculate expected
+								result</button>
 						</div>
 					</div>
 				</div>
@@ -131,10 +136,10 @@
 						<div class="box bg-white py-5">
 							<h3 class="text-capitalize">team One</h3>
 							<ul class="mt-4">
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capitalize">rating : 5</span></li>
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capita">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capitalize">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capita">rating : 5</span></li>
 							</ul>
 						</div>
 					</div>
@@ -145,10 +150,10 @@
 						<div class="box bg-white py-5">
 							<h3 class="text-capitalize">team two</h3>
 							<ul class="mt-4">
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capitalize">rating : 5</span></li>
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capita">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capitalize">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capita">rating : 5</span></li>
 							</ul>
 						</div>
 					</div>
@@ -159,7 +164,8 @@
 				<div class="row">
 					<div class="col-12 mb-5 mt-3">
 						<div class="form-group text-center">
-							<button class="calc-result text-white text-capitalize" type="submit">actual match result</button>
+							<button class="calc-result text-white text-capitalize" type="submit">actual match
+								result</button>
 						</div>
 					</div>
 				</div>
@@ -168,10 +174,10 @@
 						<div class="box bg-white py-5">
 							<h3 class="text-capitalize">team one</h3>
 							<ul class="mt-4">
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capitalize">rating : 5</span></li>
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capitalize">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capitalize">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capitalize">rating : 5</span></li>
 							</ul>
 						</div>
 					</div>
@@ -182,10 +188,10 @@
 						<div class="box bg-white py-5">
 							<h3 class="text-capitalize">team two</h3>
 							<ul class="mt-4">
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capitalize">rating : 5</span></li>
-								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-										class="rate text-capitalize">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capitalize">rating : 5</span></li>
+								<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+											name</span></a><span class="rate text-capitalize">rating : 5</span></li>
 							</ul>
 						</div>
 					</div>
@@ -199,19 +205,19 @@
 					<div class="col-md-6">
 						<h4 class="text-center text-capitalize stroked-title"><span class="pl-4">team one</span></h4>
 						<ul class="mt-4">
-							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-									class="rate text-capitalize">rating : 5</span></li>
-							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-									class="rate text-capitalize">rating : 5</span></li>
+							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+										name</span></a><span class="rate text-capitalize">rating : 5</span></li>
+							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+										name</span></a><span class="rate text-capitalize">rating : 5</span></li>
 						</ul>
 					</div>
 					<div class="col-md-6 mt-5 mt-md-0">
 						<h4 class="text-center text-capitalize stroked-title"><span class="pl-4">team two</span></h4>
 						<ul class="mt-4">
-							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-									class="rate text-capitalize">rating : 5</span></li>
-							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player name</span></a><span
-									class="rate text-capitalize">rating : 5</span></li>
+							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+										name</span></a><span class="rate text-capitalize">rating : 5</span></li>
+							<li><a href="profile.html"><img src="img/player.jpg" alt="image alt"><span>player
+										name</span></a><span class="rate text-capitalize">rating : 5</span></li>
 						</ul>
 					</div>
 					<div class="col-12 mt-5">
@@ -250,8 +256,8 @@
 	<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.js"></script>
+
 	<script src="js/all.min.js"></script>
 	<script>
 		function format(option) {
