--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+	<div class="mode-switcher">
+		<button id="toggle-dark-mode">🌓</button>
+	</div>
 	<header class="header">
 		<div class="container">
 			<div class="nav--bar d-flex align-items-center">
@@ -27,14 +30,17 @@
 							draggable="false"></a></div>
 				<nav class="nav">
 					<ul class="links d-flex align-items-center">
-						<li class="item"><a class="link text-uppercase" href="index.html"><i class="fas fa-home"></i>Home</a></li>
+						<li class="item"><a class="link text-uppercase" href="index.html"><i
+									class="fas fa-home"></i>Home</a></li>
 						<li class="item"><a class="link text-uppercase active" href="leaderboard.html"><i
 									class="fas fa-chalkboard"></i>leaderboard</a></li>
 						<li class="item"><a class="link text-uppercase" href="challenges.html"><i
 									class="fas fa-chess-board"></i>challenges</a></li>
-						<li class="item"><a class="link text-uppercase" href="profile.html"><i class="far fa-user"></i>my
+						<li class="item"><a class="link text-uppercase" href="profile.html"><i
+									class="far fa-user"></i>my
 								profile</a></li>
-						<li class="item"><a class="link text-uppercase" href="news.html"><i class="far fa-user"></i>news</a></li>
+						<li class="item"><a class="link text-uppercase" href="news.html"><i
+									class="far fa-user"></i>news</a></li>
 						<li class="item"><a class="link text-uppercase" href="login.html"><i
 									class="fas fa-sign-in-alt"></i>login</a></li>
 					</ul>
@@ -43,7 +49,8 @@
 						<path d="M15.8732 1.27464H23V8.09154" stroke="white" stroke-width="3"></path>
 						<path d="M22.8451 15.3732L22.8451 22.5L16.0282 22.5" stroke="white" stroke-width="3"></path>
 						<path d="M8.12676 22.3451L1 22.3451L1 15.5282" stroke="white" stroke-width="3"></path>
-						<path d="M1.15493 8.24648L1.15493 1.11971L7.97183 1.11971" stroke="white" stroke-width="3"></path>
+						<path d="M1.15493 8.24648L1.15493 1.11971L7.97183 1.11971" stroke="white" stroke-width="3">
+						</path>
 					</svg>
 					<svg id="shrink" width="21" height="21" viewBox="0 0 21 21" fill="none">
 						<path d="M12.7826 0V7.30435H21" stroke="white" stroke-width="2"></path>
@@ -51,7 +58,8 @@
 						<path d="M8.21739 20.087V12.7826H7.59959e-07" stroke="white" stroke-width="2"></path>
 						<path d="M8.21739 0V7.30435H7.59959e-07" stroke="white" stroke-width="2"></path>
 					</svg></i>
-				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span class="line"></span>
+				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span
+						class="line"></span>
 				</div>
 			</div>
 		</div>
@@ -72,8 +80,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -84,8 +94,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -96,8 +108,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -108,8 +122,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -120,8 +136,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -132,8 +150,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -144,8 +164,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -156,8 +178,10 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
-							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a></h6>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
+									alt="image alt"></a>
+							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
+							</h6>
 						</td>
 						<td>5</td>
 						<td>6</td>
@@ -196,7 +220,7 @@
 	<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js"></script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.js"></script>
 	<script src="js/all.min.js"></script>
 </body>
