--- a/news.html
+++ b/news.html
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+	<div class="mode-switcher">
+		<button id="toggle-dark-mode">🌓</button>
+	</div>
 	<header class="header">
 		<div class="container">
 			<div class="nav--bar d-flex align-items-center">
@@ -556,7 +559,7 @@
 	<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js"></script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.js"></script>
 	<script src="js/all.min.js"></script>
 	<script type="text/javascript">
