--- a/redeem.html
+++ b/redeem.html
@@ -43,6 +43,9 @@
 </head>
 
 <body>
+	<div class="mode-switcher">
+		<button id="toggle-dark-mode">🌓</button>
+	</div>
 	<header class="header">
 		<div class="container">
 			<div class="nav--bar d-flex align-items-center">
@@ -50,7 +53,8 @@
 							draggable="false"></a></div>
 				<nav class="nav">
 					<ul class="links d-flex align-items-center">
-						<li class="item"><a class="link text-uppercase" href="index.html"><i class="fas fa-home"></i>Home</a></li>
+						<li class="item"><a class="link text-uppercase" href="index.html"><i
+									class="fas fa-home"></i>Home</a></li>
 						<li class="item"><a class="link text-uppercase" href="leaderboard.html"><i
 									class="fas fa-chalkboard"></i>leaderboard</a></li>
 						<li class="item"><a class="link text-uppercase" href="challenges.html"><i
@@ -58,7 +62,8 @@
 						<li class="item"><a class="link text-uppercase" href="profile.html">
 								<i class="far fa-user"></i>my profile</a>
 						</li>
-						<li class="item"><a class="link text-uppercase" href="news.html"><i class="far fa-user"></i>news</a></li>
+						<li class="item"><a class="link text-uppercase" href="news.html"><i
+									class="far fa-user"></i>news</a></li>
 						<li class="item"><a class="link text-uppercase" href="login.html"><i
 									class="fas fa-sign-in-alt"></i>login</a></li>
 					</ul>
@@ -76,7 +81,8 @@
 						<path d="M8.21739 20.087V12.7826H7.59959e-07" stroke="white" stroke-width="2"></path>
 						<path d="M8.21739 0V7.30435H7.59959e-07" stroke="white" stroke-width="2"></path>
 					</svg></i>
-				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span class="line"></span>
+				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span
+						class="line"></span>
 				</div>
 			</div>
 		</div>
@@ -91,7 +97,8 @@
 					<i class="fas fa-times-circle"></i>
 				</div>
 				<p class="success-txt">Redeem under review
-					<span>Thank you for redeeming,<br> you will receive your first email within the next 24 hours.</span>
+					<span>Thank you for redeeming,<br> you will receive your first email within the next 24
+						hours.</span>
 				</p>
 				<p class="failure-txt d-none">Failed to redeem
 					<span>Failed msg is here</span>
@@ -153,7 +160,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 	<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js"></script>
+
 	<script src="js/all.min.js"></script>
 </body>
 
