--- a/news.html
+++ b/news.html
@@ -173,26 +173,27 @@
 												</div>
 											</div>
 											<div class="col-md-6">
-												<div class="match-info bottom text-center">
-													<ul>
-														<li class="close-icon">
-															<svg width="8" viewBox="0 0 20 20" fill="currentColor">
-																<path fill-rule="evenodd"
-																	d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-																	clip-rule="evenodd" />
-															</svg>
-														</li>
-														<li>
-															<h5 class="font-weight-bolder m-0">
-																orden de juego 2t
-															</h5>
-														</li>
-														<li>
-															<h5 class="font-weight-bolder m-0">
-																order of play 2A
-															</h5>
-														</li>
-													</ul>
+												<div class="result-table">
+													<table class="table table-bordered">
+														<th></th>
+														<th>Sanshez <span>&</span><br> Galan</th>
+														<th>Diaz <span>&</span><br> Maria</th>
+														<tr>
+															<td>Result</td>
+															<td class="text-center">6</td>
+															<td class="text-center">3</td>
+														</tr>
+														<tr>
+															<td>Expected</td>
+															<td class="text-center">6</td>
+															<td class="text-center">3</td>
+														</tr>
+														<tr>
+															<td>Rating +/-</td>
+															<td class="text-center">+26</td>
+															<td class="text-center">-20</td>
+														</tr>
+													</table>
 												</div>
 											</div>
 										</div>
