--- a/login.html
+++ b/login.html
@@ -30,17 +30,14 @@
 							draggable="false"></a></div>
 				<nav class="nav">
 					<ul class="links d-flex align-items-center">
-						<li class="item"><a class="link text-uppercase" href="index.html"><i
-									class="fas fa-home"></i>Home</a></li>
+						<li class="item"><a class="link text-uppercase" href="index.html"><i class="fas fa-home"></i>Home</a></li>
 						<li class="item"><a class="link text-uppercase" href="leaderboard.html"><i
 									class="fas fa-chalkboard"></i>leaderboard</a></li>
 						<li class="item"><a class="link text-uppercase" href="challenges.html"><i
 									class="fas fa-chess-board"></i>challenges</a></li>
-						<li class="item"><a class="link text-uppercase" href="profile.html"><i
-									class="far fa-user"></i>my
+						<li class="item"><a class="link text-uppercase" href="profile.html"><i class="far fa-user"></i>my
 								profile</a></li>
-						<li class="item"><a class="link text-uppercase" href="news.html"><i
-									class="far fa-user"></i>news</a></li>
+						<li class="item"><a class="link text-uppercase" href="news.html"><i class="far fa-user"></i>news</a></li>
 						<li class="item"><a class="link text-uppercase active" href="login.html"><i
 									class="fas fa-sign-in-alt"></i>login</a></li>
 					</ul>
@@ -58,8 +55,7 @@
 						<path d="M8.21739 20.087V12.7826H7.59959e-07" stroke="white" stroke-width="2"></path>
 						<path d="M8.21739 0V7.30435H7.59959e-07" stroke="white" stroke-width="2"></path>
 					</svg></i>
-				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span
-						class="line"></span>
+				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span class="line"></span>
 				</div>
 			</div>
 		</div>
@@ -147,8 +143,7 @@
 											<li class="text-capitalize"> both</li>
 										</ul>
 									</div>
-									<div class="form-group birthdate-calendar text-capitalize"><i
-											class="birthdate-icon">
+									<div class="form-group birthdate-calendar text-capitalize"><i class="birthdate-icon">
 											<svg width="25" height="25" viewBox="0 0 53 56" fill="none">
 												<path
 													d="M48 7H5C2.79086 7 1 8.79086 1 11V51C1 53.2091 2.79086 55 5 55H48C50.2091 55 52 53.2091 52 51V11C52 8.79086 50.2091 7 48 7Z"
@@ -159,8 +154,8 @@
 												<path d="M15 36L22.5 43.5L39 27" stroke="white" stroke-width="3"></path>
 											</svg></i>
 										<label class="text-white" for="datepicker">birthdate</label>
-										<input id="datepicker" type="text" placeholder="d-m-Y" data-large-mode="true"
-											data-lock="to" data-translate-mode="true">
+										<input id="datepicker" type="text" placeholder="d-m-Y" data-large-mode="true" data-lock="to"
+											data-translate-mode="true">
 									</div>
 									<div class="form-group text-capitalize">
 										<button class="bg-light" type="submit">Register</button>
@@ -223,8 +218,6 @@
 			panelTwo = $('.form-panel.two')[0].scrollHeight + 200;
 
 		$('.form-panel.two').not('.form-panel.two.active').on('click', function (e) {
-			//- e.preventDefault();
-
 			$('.form-toggle').addClass('visible');
 			$('.form-panel.one').addClass('hidden');
 			$('.form-panel.two').addClass('active');
