--- a/news.html
+++ b/news.html
@@ -176,8 +176,8 @@
 												<div class="result-table">
 													<table class="table table-bordered">
 														<th></th>
-														<th>Sanshez <span>&</span><br> Galan</th>
-														<th>Diaz <span>&</span><br> Maria</th>
+														<th>Sanshez <span>&</span> Galan</th>
+														<th>Diaz <span>&</span> Maria</th>
 														<tr>
 															<td>Result</td>
 															<td class="text-center">6</td>
