move this line ,$("#leaderboard-table").DataTable({responsive:!0,scrollCollapse:!0,scrollY:400,scrollX:!0}) to html.

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -30,17 +30,14 @@
 							draggable="false"></a></div>
 				<nav class="nav">
 					<ul class="links d-flex align-items-center">
-						<li class="item"><a class="link text-uppercase" href="index.html"><i
-									class="fas fa-home"></i>Home</a></li>
+						<li class="item"><a class="link text-uppercase" href="index.html"><i class="fas fa-home"></i>Home</a></li>
 						<li class="item"><a class="link text-uppercase active" href="leaderboard.html"><i
 									class="fas fa-chalkboard"></i>leaderboard</a></li>
 						<li class="item"><a class="link text-uppercase" href="challenges.html"><i
 									class="fas fa-chess-board"></i>challenges</a></li>
-						<li class="item"><a class="link text-uppercase" href="profile.html"><i
-									class="far fa-user"></i>my
+						<li class="item"><a class="link text-uppercase" href="profile.html"><i class="far fa-user"></i>my
 								profile</a></li>
-						<li class="item"><a class="link text-uppercase" href="news.html"><i
-									class="far fa-user"></i>news</a></li>
+						<li class="item"><a class="link text-uppercase" href="news.html"><i class="far fa-user"></i>news</a></li>
 						<li class="item"><a class="link text-uppercase" href="login.html"><i
 									class="fas fa-sign-in-alt"></i>login</a></li>
 					</ul>
@@ -58,8 +55,7 @@
 						<path d="M8.21739 20.087V12.7826H7.59959e-07" stroke="white" stroke-width="2"></path>
 						<path d="M8.21739 0V7.30435H7.59959e-07" stroke="white" stroke-width="2"></path>
 					</svg></i>
-				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span
-						class="line"></span>
+				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span class="line"></span>
 				</div>
 			</div>
 		</div>
@@ -80,8 +76,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -94,8 +89,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -108,8 +102,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -122,8 +115,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -136,8 +128,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -150,8 +141,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -164,8 +154,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -178,8 +167,7 @@
 					<tr>
 						<td>1</td>
 						<td class="player-info"><a class="avatar-prof mr-2 rounded-circle" href="profile.html"><img
-									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg"
-									alt="image alt"></a>
+									class="img-fluid rounded-circle d-inline-block" src="img/player.jpg" alt="image alt"></a>
 							<h6 class="name m-0 d-inline-block text-capitalize"><a href="profile.html">player name</a>
 							</h6>
 						</td>
@@ -223,6 +211,14 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.js"></script>
 	<script src="js/all.min.js"></script>
+	<script>
+		$("#leaderboard-table").DataTable({
+			responsive: !0,
+			scrollCollapse: !0,
+			scrollY: 400,
+			scrollX: !0
+		});
+	</script>
 </body>
 
 </html>
