--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
 	</header>
 	<section class="log-page">
 		<div class="container">
-			<div class="row py-5">
+			<div class="row py-5 align-items-start">
 				<div class="col-lg-6">
 					<div class="form">
 						<div class="form-toggle"></div>
@@ -88,8 +88,10 @@
 									</div>
 									<div class="form-group text-capitalize">
 										<input type="checkbox" id="custom-check">
-										<label class="form-remember text-capitalize" for="custom-check">Remember
-											Me</label><a class="form-recovery" href="#">Forgot Password?</a>
+										<label class="form-remember text-capitalize" for="custom-check">
+											Remember Me
+										</label>
+										<a class="form-recovery" href="#forget-pass-modal" data-toggle="modal">Forgot Password?</a>
 									</div>
 									<div class="form-group text-capitalize">
 										<button type="submit">Log In</button>
@@ -171,18 +173,7 @@
 			</div>
 		</div>
 	</section>
-	<div class="forget-pass" id="forget-pass">
-		<div class="box"><span class="close-forget-pass">×</span>
-			<h5 class="mb-3">Reset Your Password</h5>
-			<form class="form">
-				<div class="form-group m-0">
-					<label for="">Username Or Email</label>
-					<input class="form-control" type="email">
-					<button type="submit">Send Password</button>
-				</div>
-			</form>
-		</div>
-	</div>
+
 	<div class="sponsors my-5">
 		<div class="container">
 			<div class="sponsors-slider">
@@ -196,6 +187,34 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Modal -->
+	<div class="forget-pass-modal modal fade" id="forget-pass-modal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Reset Password</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>Enter your email address and we will send you a link to reset your password.</p>
+
+					<form class="form">
+						<div class="form-group m-0">
+							<input class="form-control" type="text" placeholder="Enter your email address">
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn send-btn">Reset Password</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="text-inner">
@@ -203,6 +222,7 @@
 			</div>
 		</div>
 	</footer>
+
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
@@ -235,29 +255,6 @@
 			}, 200);
 		});
 
-		var $forgotPassword = $('.forget-pass');
-
-		$('.form-recovery').click(function (e) {
-			e.preventDefault();
-			$forgotPassword.fadeIn();
-		});
-		$('.close-forget-pass').click(function () {
-			$forgotPassword.fadeOut();
-		});
-		$('.form-recovery').click(function (e) {
-			e.stopPropagation();
-		})
-		$forgotPassword.find('.box').click(function (e) {
-			e.stopPropagation();
-		})
-		$(document).click(function () {
-			$forgotPassword.fadeOut();
-		})
-		$(document).keydown(function (e) {
-			if (e.keyCode == 27) {
-				$forgotPassword.fadeOut();
-			}
-		});
 	</script>
 </body>
 
